assets/css/styles.css
/* ... */
/* -- SITE STRUCTURE -- */
.flex-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
}

.container-inner {
    max-width: 1170px;
}

section {
    max-width: 100vw;
    padding: 35px 0;
}

section .container-inner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 35px;
}

header .container-inner,
footer .container-inner {
    height: auto;
    padding: 0 35px;
}

.control-width {
    max-width: 1700px;
    margin: 0 auto;
}

.checklist,
.card-container,
form {
    margin-top: 70px;
}

.section-heading {
    max-width: 5em;
    margin: 0 auto 1em;
}

.label-input-container {
    margin-top: 20px;
}

form input {
    height: 35px;
    margin-top: 5px;
}

#back-to-top i {
    margin-bottom: 1rem;
}



/* Main Header & Navigation */
#main-header {
    background-color: #fff;
    box-shadow: 0 0 6px 0 rgb(0 0 0 / 25%);
}

#logo {
    background:  url('../images/logo.webp') no-repeat center/contain;
    width:  250px;
    height:  70px;
    margin: 1rem 0;
}

#logo h1 {
    position: fixed;
    left: -9999em;
}

nav {
    width: auto;
}

#main-menu {
    margin: 15px 0;
    padding: 0;
    justify-content: space-around;
    flex-direction: row;
}

#main-menu li {
    margin: 0;
}

#main-menu li:nth-child(2) {
    margin: 0 30px;
}

#main-menu a {
    padding-bottom:  0.5rem;
}


/* Hero Section */
#hero {
    background: url('../images/hero-image.webp') no-repeat center/cover;
    position: relative;
    height: 600px;
}

aside {
    position: absolute;
    top: 50%;
    right: 10%;
    bottom: 50%;
    left: auto;
    text-align: center;
    width: 15%;
    height: 45%;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding: 0 15px;
}

aside h2,
aside p {
    margin: 0;
    padding: 0;
}


/* Your Job */
#your-job {
    background-color: #FBF6F0;
}

#your-job .container-inner {
    justify-content: flex-start;
}

.checklist {
    column-count: 2;
    padding: 0;
}

.checklist li {
    text-align: left;
    list-style: none;
    margin: 0.25em auto 1em;
    padding-left: 2.7rem;
    position: relative;
}

.checklist i {
    font-size: 1.2em;
    position: absolute;
    left: 0;
}

.checklist li:first-of-type {
    margin-top: 0;
}

#your-job .button {
    margin-top: 35px;
}


/* Our Job */
.card-container {
    justify-content: space-evenly;
}

#lawn-treatments {
    background: url('../images/lawn-treatments.webp') no-repeat center/cover;
}

#hard-surfaces {
    background: url('../images/hard-surfaces.webp') no-repeat center/cover;
}

.card {
    position: relative;
    background-color: #3B610F;
    text-align: center;
    margin-top: 2em;
    margin-bottom: 2em;
    min-height: 410px;
    padding: 2em 0;
    width: 30%;
    flex-direction: column;
}

.card h3,
.card .overlay,
.card .button {
    position: relative;
    width: 90%;
}

.card h3 {
    margin: -6rem auto 0;
    padding: 0.5rem 0;
}

.card .overlay {
    flex-direction: column;
    justify-content: center;
    flex: 1;
}

.card dt {
    margin: 0 auto 0.5em;
    width: fit-content;
}

.card dt:not(:first-of-type) {
    margin-top: 1em;
}

.card dd {
    margin: 0;
}

.card ul {
    margin: 0;
    padding: 0;
}

.card .overlay-content {
    width: 100%;
}

.card .overlay-content p {
    margin: 0.3em 0 0;
}

.card li {
    list-style: none;
}

.card .button {
    padding: 10px 0;
    margin-top: 1.5rem;
}


/* Let's Go */
form {
    margin: 1.6em auto 0;
    max-width: 90%;
}

.label-input-container {
    width: 49%;
}

label,
input {
    display: block;
    box-sizing: border-box;
    width: 100%;
}

label:not(:first-of-type) {
    margin-top: 1em;
}

form button {
    display: block;
    margin: 1em 0;
}


/* Footer */
footer {
    padding: 1em;
}

footer .flex-container {
    justify-content: center;
}

footer .container-inner > .flex-container {
    width: 33%;
    margin-top: 0;
}

#social-media,
#social-media ul {
    display: flex;
    flex-direction: row;
}

#social-media {
    margin: 0;
    justify-content: flex-start;
}

#social-media li {
    margin: 0 0.8em;
}


#copyright {
    justify-content: flex-end;
}




/* MEDIA QUERIES */

/* Desktops */
@media (min-width: 1200px) {

    header .container-inner,
    footer .container-inner {
        max-width: 100%;
    }

    .card .overlay {
        padding: 0 85px;
    }

    form {
        width: 1240px;
    }

}

/* Laptops */
@media (min-width: 1280px) 
   and (max-width: 1680px) {

    #hero {
        height: 400px;
    }

    .card {
        width: 45%;
    }
 }

/* Tablet (Landscape) */
@media (min-width: 1024px) 
   and (max-width: 1366px) {

    #hero {
        height: 350px;
    }

    aside {
        width: 25%;
        height: 60%;
    }

}

/* Tablet (Portrait) */
@media (max-width: 1024px)
   and (orientation: portrait) {

    #hero {
        height: 350px;
    }

    aside {
        height: 66%;
        width: 30%;
    }

    .checklist li {
        width: 60%;
    }

    .card {
        width: 45%
    }

    .mobile-nav-container {
        display: block;
        margin-right: 25px;
    }

    #mobile-nav {
        top: -16px;
    }

    nav {
        display: none;
    }

}


/* Phone Large (Landscape) */
@media (max-width: 914px)
   and (orientation: landscape) {

    #hero {
        height: 260px;
    }

    aside {
        height: 220px;
        width: 33%;
    }

    .card {
        min-height: 420px;
    }

    .card h3 {
        font-size: 2.2rem;
    }


}
/* ... */

